# Graph-Builder

./: README.md  buiding_script.py  building_script.py  full_abbreviations_updated.json  prepare_knowledge_for_it_support.ipynb  pyproject.toml  requirements.txt
