[project]
name = "meno-graph-builder"
version = "0.1.0"
description = "Graph building scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
#    "accelerate>=1.7.0",
#    "future>=1.0.0",
#    "graspologic>=3.4.1",
    "lightrag-hku==1.2.6",
#    "nano-vectordb>=0.0.4.3",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.1",
    "openai>=1.82.0",
#    "pipmaster>=0.7.2",
#    "pydantic-settings>=2.9.1",
    "pymorphy2>=0.9.1",
#    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
#    "tenacity>=9.1.2",
#    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "tqdm>=4.67.1",
]